<resources>
    <string name="app_name">Bonch.Dev Messenger</string>
    <string name="Enter">Войти</string>
    <string name="RegistrationVerb">Зарегестрироваться</string>
    <string name="Registration">Регистрация</string>
    <string name="Mail">Почта</string>
    <string name="Password">Пароль</string>
    <string name="confirm_password">Подтвердите пароль</string>
    <string name="confirm_mail">Подтвердить почту</string>
    <string name="change_password">Поменять пароль</string>
    <string name="old_password">Старый пароль</string>
    <string name="new_password">Новый пароль</string>
    <string name="exit">Выйти</string>
    <string name="user_name">Ваше имя</string>
    <string name="login">Логин</string>
    <string name="change">Поменять</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Igor Savinov</string>
    <string name="nav_header_subtitle">savinov26@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_chat">Chat</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
